# LiveMart

./: .env.example  .pre-commit-config.yaml  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  project_report.md  project_report.tex
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: crud.py  main.py  utils.py
backend/app/alembic/versions/: 1763260681_9c93298c9e26_init.py  1763361295_ab554e254ead_addresses.py  1763508244_365351ac05d3_products.py  1763513646_1d6de7e98935_convert_product_json_jsonb.py  1763561051_d3abac394ad9_product_brand_address_id_search_filters.py  1763633669_3fc0b848c524_cart_orders_payments.py  1763757160_2f0c368be21b_reviews.py  1763820981_2d6803cf3858_coupons_and_settlements.py  2aa045dc9576_otp.py  d55c4a0f9d5b_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: addresses.py  cart.py  coupons.py  items.py  login.py  orders.py  payments.py  products.py  reviews.py  signup.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: __init__.py  addresses.py  cart.py  coupons.py  items.py  orders.py  otp.py  products.py  reviews.py  settlements.py  users.py
backend/app/email-templates/src/: delivery_claimed.mjml  new_order.mjml  order_confirmation.mjml  otp.mjml  (+1 more)
backend/app/models/: __init__.py  address.py  common.py  coupon.py  item.py  order.py  otp.py  product.py  review.py  role.py  settlement.py  user.py
backend/app/utils/: __init__.py  email.py  images.py  location.py  razorpay.py  tokens.py
backend/scripts/: populate_demo_data.py  start-with-prestart.sh
(+108 files in other folders)
