[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.121.1,<1.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "tenacity>=8.4.1,<9.0.0",
    "pydantic>=2.12,<3.0.0",
    "emails>=0.6,<1.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg[binary]>=3.2,<4.0.0",
    "sqlmodel>=0.0.21,<1.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "authlib>=1.3.1,<2.0.0",
    "itsdangerous>=2.2.0",
]


[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
